--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
     box-sizing: border-box;
     font-family: 'poppins' , sans-serif;
 }
-
+.heading{
+    margin-bottom: 15px;
+    padding: 5px;
+    text-align: center;
+    font-size: 25px;
+}
 body{
   background-color:rgb(224, 238, 240);
   
