--- a/style.css
+++ b/style.css
@@ -116,3 +116,45 @@ body{
     font-size: 14px;
     display: none;
 }
+
+@media (max-width: 480px) {
+    .heading {
+        font-size: 18px;
+    }
+
+    .search input {
+        padding: 6px 15px;
+        font-size: 14px;
+    }
+
+    .search button {
+        width: 40px;
+        height: 40px;
+    }
+
+    .weather-icon {
+        width: 130px;
+    }
+
+    .weather h1 {
+        font-size: 50px;
+    }
+
+    .weather h2 {
+        font-size: 30px;
+    }
+
+    .details {
+        padding: 0;
+    }
+
+    .col {
+        flex-direction: column;
+        align-items: flex-start;
+       
+    }
+
+    .col p{
+        margin-top: 8px;
+    }
+}
